# tamborgcont

./: .editorconfig  .gitignore  Notes.md  Readme.md  config.example.yml  config.test.yml  config.yml  env.example  hook.sh  install_ansible_collections.sh  install_galaxy_reqs.sh  pyproject.toml  update_authorized_keys.sh
ansible/: .ansible-lint  install_galaxy_reqs.sh  requirements.yml  vars.sh
ansible/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/molecule/default/files/: auth_ssh_localhost.sh  get_ext4_reserved_space.sh  prepare_existing_ak.sh  prepare_ssh_localhost.sh  verify_ak.sh  verify_shell.sh  verify_ssh.sh  verify_ssh_none.sh
ansible/playbooks/: deploy.yml  update_ak.yml
ansible/playbooks/roles/deploy/files/: .gitconfig  60-ioscheduler.rules  autosuspend-detect-suspend.service  autosuspend.conf  autosuspend.service  borg-daily.service  borg-daily.timer  deadsnakes_apt_preferences  ext4_reserve.sh  hpnssh-default  hpnssh.service  nginx_site  silence-console.service  ssh_pam_hook.sh  sshd_config  tamborg-release-lock.service
ansible/playbooks/roles/deploy/files/hpnssh.service.d/: override.conf
ansible/playbooks/roles/deploy/files/nginx.service.d/: override.conf
ansible/playbooks/roles/deploy/tasks/: autosuspend.yml  hook.yml  hpnssh.yml  main.yml  nginx.yml  python.yml  system.yml  users.yml  zsh.yml  zsh_rc.yml
ansible/playbooks/roles/update_ak/tasks/: main.yml
daily/: http_server.py  main.py  smarthealthc.py  utils.py
extras/: Readme.md  disable-gpe09.service  manual-spindown-mirror@.service  manual-spindown-mirror@.timer
hook/: Borg.py  borg.py  config.py  constants.py  main.py  utils.py
mirror_server/: .gitignore  Dockerfile  Readme.md  cmd.sh  docker-compose.yml  sshd_config
shared/: borg.py  config.py  constants.py  pubsub.py  shell.py  utils.py
src/: Borg.py  constants.py  hook.py  utils.py
tests/: conftest.py  test_acquire_lock.py  test_fill_lock.py  test_invalid_usage.py  test_release_lock.py  test_ssh_wo_command.py
