[tool.poetry]
name = "tamborgcont"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.12"
ansible-core = "^2.16.2"
PyYAML = "^6.0.1"
sh = "^2.0.6"
molecule-plugins = {extras = ["vagrant"], version = "^23.5.0"}
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
molecule = "^6.0.3"
ansible-lint = { version = "^6.22.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
