[tool.poetry]
name = "tamborgcont"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
ansible-core = "^2.18.6"
PyYAML = "^6.0.2"
sh = "^2.2.2"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
molecule-plugins = {extras = ["vagrant"], version = "^23.7.0"}
ansible-lint = { version = "^25.6.1", markers = "platform_system != 'Windows'" }
molecule = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
